change arrow div place

--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -18,24 +18,11 @@
     border-radius: 0.25em;
     border: 1px solid rgba(100, 100, 100, 0.3);
     transition: .4s ease-out;
-
-
-
-      // arrow
-
-    #arrowDiv {
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, 0);
-
-
-        .leftArrow {
-            left: 25%;
-        }
-    }
-
-
 }
+
+
+
+
 
 .modal-close-btn {
     position: absolute;
@@ -99,3 +86,36 @@
 }
 
 
+
+
+      // arrow
+#arrowLeft, #arrowRight{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 80px;
+    height: 60px;
+    cursor: pointer;
+}
+
+.leftArrow, .rightArrow {
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 90%;
+    height: 10px;
+    background-color: #fff;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+}
+
+
+#arrowLeft {
+    left: calc(100% / 5);
+    right: -80%;
+}
+
+
+#arrowRight {
+    right: 25%;
+}
