--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -87,9 +87,11 @@
 
 
 
+// arrow
 
-      // arrow
-#arrowLeft, #arrowRight{
+
+#outsideArrowL, #outsideArrowR,
+#insideArrowL, #insideArrowR{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -105,9 +107,14 @@
     transform: translate(-50%,-50%);
     width: 90%;
     height: 10px;
-    background-color: #fff;
     box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
 }
 
+#outsideArrowL .leftArrow, #outsideArrowR .rightArrow {
+    background-color: #fff;
+}
 
+#insideArrowL .leftArrow, #insideArrowR .rightArrow {
+    background-color: #000;
+}
 
