--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -18,73 +18,43 @@
     border-radius: 0.25em;
     border: 1px solid rgba(100, 100, 100, 0.3);
     transition: .4s ease-out;
+
+    // button
+    &-close-btn {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        cursor: pointer;
+        color: rgba(255, 255, 255, 0.9);
+        background: rgba(0, 0, 0, 0.8);
+        outline: none;
+        border-radius: 0.25em;
+        border: 1px solid rgba(50, 50, 50, 0.3);
+    }
+
+    // image 
+    &-img {
+        width: 150px;
+        margin-top: 35px;
+        border-radius: 50%;
+    }
+
+    &-name {
+        margin-bottom: 5px;
+    }
+    
+    &-text {
+        color: rgba(50, 50, 50, 0.7);
+        margin: 10px;
+    }
+    
+    hr {
+        width: 75%;
+        margin: 25px auto 30px;
+        border-color: rgba(200, 200, 200, 0.2);
+    }
+    
 }
-
-
-
-
-
-.modal-close-btn {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    cursor: pointer;
-    color: rgba(255, 255, 255, 0.9);
-    background: rgba(0, 0, 0, 0.8);
-    outline: none;
-    border-radius: 0.25em;
-    border: 1px solid rgba(50, 50, 50, 0.3);
-}
-
-.modal-img {
-    width: 150px;
-    margin-top: 35px;
-    border-radius: 50%;
-}
-
-.modal-name {
-    margin-bottom: 5px;
-}
-
-.modal-text {
-    color: rgba(50, 50, 50, 0.7);
-    margin: 10px;
-}
-
-.modal hr {
-    width: 75%;
-    margin: 25px auto 30px;
-    border-color: rgba(200, 200, 200, 0.2);
-}
-
-.modal-btn-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
-    width: 95%;
-    max-width: 420px;
-    padding: 10px 15px 15px;;
-    margin: 10px auto auto;
-    background: rgba(255, 255, 255, 1);
-    border-radius: 0.25em;
-    border: 1px solid rgba(100, 100, 100, 0.3);
-}
-
-
-.modal-btn-container .btn {
-    display: inline-block;
-    cursor: pointer;
-    font-size: 0.85em;
-    text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.9);
-    padding: 0.75em 1.5em;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 0.35em;
-    transition: .4s ease-out;
-    outline: none;
-}
-
 
 
 // arrow
@@ -118,20 +88,6 @@
     background-color: #000;
 }
 
-.rightArrow::after, .rightArrow::before,
-.leftArrow:after, .leftArrow:before {
-    content: "";
-    position: absolute;
-    width: 60%;
-    height: 10px;
-}
-
-// right
-
-.rightArrow::after, .rightArrow::before {
-    right: -8px;
-}
-
 #outsideArrowR .rightArrow::after,
 #outsideArrowR .rightArrow::before,
 #outsideArrowL .leftArrow::after,
@@ -144,6 +100,20 @@
 #insideArrowL .leftArrow::after,
 #insideArrowL .leftArrow::before {
     background-color: #000;
+}
+
+.rightArrow::after, .rightArrow::before,
+.leftArrow:after, .leftArrow:before {
+    content: "";
+    position: absolute;
+    width: 60%;
+    height: 10px;
+}
+
+// right
+
+.rightArrow::after, .rightArrow::before {
+    right: -8px;
 }
 
 .rightArrow::after {
