--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -80,14 +80,8 @@
     box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
 }
 
-#outsideArrowL .leftArrow, #outsideArrowR .rightArrow {
-    background-color: #fff;
-}
-
-#insideArrowL .leftArrow, #insideArrowR .rightArrow {
-    background-color: #000;
-}
-
+#outsideArrowL .leftArrow,
+#outsideArrowR .rightArrow,
 #outsideArrowR .rightArrow::after,
 #outsideArrowR .rightArrow::before,
 #outsideArrowL .leftArrow::after,
@@ -95,11 +89,13 @@
     background-color: #fff;
 }
 
+#insideArrowL .leftArrow, 
+#insideArrowR .rightArrow,
 #insideArrowR .rightArrow::after,
 #insideArrowR .rightArrow::before,
 #insideArrowL .leftArrow::after,
 #insideArrowL .leftArrow::before {
-    background-color: #000;
+    background-color: rgb(194, 181, 181);
 }
 
 .rightArrow::after, .rightArrow::before,
