add arrow hover effect

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,4 @@
 @import 'gallery/gallery.scss';
 @import 'modal/modal.scss';
 @import 'media queries/mediaQueries.scss';
+@import 'keyframe/keyframe.scss';
