--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,14 @@ header h1 {
   transform: rotate(-135deg);
 }
 
+#outsideArrowL:hover {
+  animation: OutsideMoveLeft 0.7s ease-in-out infinite;
+}
+
+#outsideArrowR:hover {
+  animation: OutsideMoveRight 0.7s ease-in-out infinite;
+}
+
 @media (max-width: 767px) {
   #outsideArrowR, #outsideArrowL {
     display: none;
@@ -294,6 +302,84 @@ header h1 {
   .btn:hover {
     background: white;
     color: #191919;
+  }
+}
+@keyframes OutsideMoveLeft {
+  12.5% {
+    left: 1.8em;
+  }
+  25% {
+    left: 1.6em;
+  }
+  37.5% {
+    left: 1.8em;
+  }
+  50% {
+    left: 2em;
+  }
+  62.5% {
+    left: 2.2em;
+  }
+  75% {
+    left: 2.4em;
+  }
+  87.5% {
+    left: 2.2em;
+  }
+  100% {
+    left: 2em;
+  }
+}
+@keyframes OutsideMoveRight {
+  12.5% {
+    right: 1.8em;
+  }
+  25% {
+    right: 1.6em;
+  }
+  37.5% {
+    right: 1.8em;
+  }
+  50% {
+    right: 2em;
+  }
+  62.5% {
+    right: 2.2em;
+  }
+  75% {
+    right: 2.4em;
+  }
+  87.5% {
+    right: 2.2em;
+  }
+  100% {
+    right: 2em;
+  }
+}
+@keyframes OutsideMoveRight {
+  12.5% {
+    right: 1.8em;
+  }
+  25% {
+    right: 1.6em;
+  }
+  37.5% {
+    right: 1.8em;
+  }
+  50% {
+    right: 2em;
+  }
+  62.5% {
+    right: 2.2em;
+  }
+  75% {
+    right: 2.4em;
+  }
+  87.5% {
+    right: 2.2em;
+  }
+  100% {
+    right: 2em;
   }
 }
 
