--- a/scss/keyframe/_keyframe.scss
+++ b/scss/keyframe/_keyframe.scss
@@ -56,29 +56,57 @@
 }
 
 
-@keyframes OutsideMoveRight {
+@keyframes InsideMoveLeft {
     12.5%{
-        right: 1.8em;
+        left: .4em;
     }
     25% {
-        right: 1.6em; 
+        left: .3em; 
     }
     37.5% {
-        right: 1.8em;
+        left: .4em;
     }
     50% {
-        right: 2em;
+        left: .5em;
     }
     62.5% {
-        right: 2.2em;
+        left: .6em;
     }
     75% {
-        right: 2.4em;
+        left: .7em;
     }
     87.5% {
-        right: 2.2em;
+        left: .6em;
     }
     100% {
-        right: 2em;
+        left: .5em;
+    }
+}
+
+
+@keyframes InsideMoveRight {
+    12.5%{
+        right: .4em;
+    }
+    25% {
+        right: .3em; 
+    }
+    37.5% {
+        right: .4em;
+    }
+    50% {
+        right: .5em;
+    }
+    62.5% {
+        right: .6em;
+    }
+    75% {
+        right: .7em;
+    }
+    87.5% {
+        right: .6em;
+    }
+    100% {
+        right: .5em;
     }
 }
