--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,7 +13,8 @@ html, body {
 body {
     font-family: "Nunito", sans-serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    background: rgb(238,174,202);
+    background: linear-gradient(90deg, rgba(238,174,202,1) -10%, rgba(72,95,156,1) 120%);
 }
 
 header {
