--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
+@import '1/1.scss';
+@import 'mixin/mixin.scss';
+@import 'keyframe/keyframe.scss';
 @import 'base/base.scss';
 @import 'gallery/gallery.scss';
 @import 'modal/modal.scss';
 @import 'media queries/mediaQueries.scss';
-@import 'keyframe/keyframe.scss';
