--- a/scss/gallery/_gallery.scss
+++ b/scss/gallery/_gallery.scss
@@ -23,10 +23,10 @@
     margin: 10px 10px 20px;
     padding: 10px;
     background: rgba(245, 245, 245, 0.9);
-    border-radius: 0.25em;
     border: 1px solid rgba(50, 50, 50, 0.3);
     transition: .4s ease-out;
     overflow: hidden;
+    @include randomBorderRaidus;
 }
 
 .card-img {
